               cause the Wyrd status line to appear on two different lines.

2005-10-02     Fixed a bug that could cause find_next and next_reminder to
               fail.

2005-09-30     Added the configuration variable 'remind_command', which can
               be used to specify the Remind executable.

2005-09-18     The current date and time are now highlighted within the month
               calendar and timed reminders window.

2005-09-17     If there are multiple reminders listed in the message window,
               they are now sorted by starting timestamp.

               Wyrd now chooses tempfile names that are unique for each user.

               Added the 'help' command, which generates a list of all
               keybindings.

2005-09-21     Released 1.1.1.

2005-09-20     Updated the build script to support the NetBSD environment.

2005-09-17     Implemented a built-in calendar layout algorithm, and removed
               the dependence on cal(1).

2005-09-15     Released 1.1.0.

               Implemented the 'next_reminder' command, which jumps forward
               to the next reminder in chronological order.

               Made 'search_next' more robust--certain edge cases are now
               handled better.

2005-09-13     Improved the alignment of timestamps in the reminder description
               window.

               Fixed a typo in the short string representation for Tuesday.

               Implemented the 'view_week' and 'view_month' commands, which
               view Remind's formatted weekly or monthly calendars for the
               selected date.

               Implemented the 'edit_any' command and associated
               'edit_any_template', which can be used to edit a reminder file
               without selecting any particular reminder.
               
               The untimed reminders window now accepts focus even when
               there are no untimed reminders.
